# TorrentInno

./: .gitignore  README.md  Report.md  app.py
.github/workflows/: ci.yml
client/: .gitignore  pyproject.toml  torentinno.py  torrentInno.py
client/cli/: cli.py
client/core/common/: peer_info.py  resource.py
client/core/p2p/: connection.py  connection_listener.py  message.py  resource_file.py  resource_manager.py  resource_manager_api.md  resource_save.py
client/core/s2p/: server_manager.py
client/core/server_communication/: communication.py
client/core/tests/: advanved_resource_manager_test.py  mocks.py  resource_manager_test.py  test_connection.py  test_message.py  test_resource_file.py  torrentInno_test.py
client/gui/: app.py  torrent_manager.py  torrent_manager_docs.md  torrentinno.kv
specs/: README.md  peer-announce.json  peer-message-exchange.md  resource.json  torrentinno.json  tracker-response.json
tests/: test_path.py
tracker/: Dockerfile  go.mod  main.go
