[project]
name = "client"
version = "0.0.1"
description = ""
requires-python = ">=3.12"
dependencies = [
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry.scripts]
cli = "cli.cli:main"

[tool.poetry]
packages = [{ include = "cli" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
